wx-core/src/generated/ffi_l.rs


    // wxListCtrl
    pub fn wxListCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxListCtrl_new() -> *mut c_void;
    pub fn wxListCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxListCtrl_~wxListCtrl(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxListCtrl_AppendColumn(self_: *mut c_void, heading: *const c_void, format: wxListColumnFormat, width: c_int) -> c_long;
    pub fn wxListCtrl_Arrange(self_: *mut c_void, flag: c_int) -> bool;
    pub fn wxListCtrl_AssignImageList(self_: *mut c_void, image_list: *mut c_void, which: c_int);
    pub fn wxListCtrl_ClearAll(self_: *mut c_void);
    pub fn wxListCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxListCtrl_DeleteAllColumns(self_: *mut c_void) -> bool;
    pub fn wxListCtrl_DeleteAllItems(self_: *mut c_void) -> bool;
    pub fn wxListCtrl_DeleteColumn(self_: *mut c_void, col: c_int) -> bool;
    pub fn wxListCtrl_DeleteItem(self_: *mut c_void, item: c_long) -> bool;
    pub fn wxListCtrl_EditLabel(
        self_: *mut c_void,
        item: c_long,
        text_control_class: *mut c_void,
    ) -> *mut c_void;
    pub fn wxListCtrl_EnableAlternateRowColours(self_: *mut c_void, enable: bool);
    pub fn wxListCtrl_EnableBellOnNoMatch(self_: *mut c_void, on: bool);
    pub fn wxListCtrl_EndEditLabel(self_: *mut c_void, cancel: bool) -> bool;
    pub fn wxListCtrl_EnsureVisible(self_: *mut c_void, item: c_long) -> bool;
    pub fn wxListCtrl_FindItem(
        self_: *mut c_void,
        start: c_long,
        str: *const c_void,
        partial: bool,
    ) -> c_long;
    // NOT_SUPPORTED: pub fn wxListCtrl_FindItem1(self_: *mut c_void, start: c_long, data: wxUIntPtr) -> c_long;
    pub fn wxListCtrl_FindItem2(
        self_: *mut c_void,
        start: c_long,
        pt: *const c_void,
        direction: c_int,
    ) -> c_long;
    pub fn wxListCtrl_GetColumn(self_: *const c_void, col: c_int, item: *mut c_void) -> bool;
    pub fn wxListCtrl_GetColumnCount(self_: *const c_void) -> c_int;
    pub fn wxListCtrl_GetColumnIndexFromOrder(self_: *const c_void, pos: c_int) -> c_int;
    pub fn wxListCtrl_GetColumnOrder(self_: *const c_void, col: c_int) -> c_int;
    pub fn wxListCtrl_GetColumnWidth(self_: *const c_void, col: c_int) -> c_int;
    pub fn wxListCtrl_GetColumnsOrder(self_: *const c_void) -> *mut c_void;
    pub fn wxListCtrl_GetCountPerPage(self_: *const c_void) -> c_int;
    pub fn wxListCtrl_GetEditControl(self_: *const c_void) -> *mut c_void;
    pub fn wxListCtrl_GetImageList(self_: *const c_void, which: c_int) -> *mut c_void;
    pub fn wxListCtrl_GetItem(self_: *const c_void, info: *mut c_void) -> bool;
    pub fn wxListCtrl_GetItemBackgroundColour(self_: *const c_void, item: c_long) -> *mut c_void;
    pub fn wxListCtrl_GetItemCount(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxListCtrl_GetItemData(self_: *const c_void, item: c_long) -> wxUIntPtr;
    pub fn wxListCtrl_GetItemFont(self_: *const c_void, item: c_long) -> *mut c_void;
    pub fn wxListCtrl_GetItemPosition(self_: *const c_void, item: c_long, pos: *mut c_void)
        -> bool;
    pub fn wxListCtrl_GetItemRect(
        self_: *const c_void,
        item: c_long,
        rect: *mut c_void,
        code: c_int,
    ) -> bool;
    pub fn wxListCtrl_GetItemSpacing(self_: *const c_void) -> *mut c_void;
    pub fn wxListCtrl_GetItemState(self_: *const c_void, item: c_long, state_mask: c_long)
        -> c_int;
    pub fn wxListCtrl_GetItemText(self_: *const c_void, item: c_long, col: c_int) -> *mut c_void;
    pub fn wxListCtrl_GetItemTextColour(self_: *const c_void, item: c_long) -> *mut c_void;
    pub fn wxListCtrl_GetNextItem(
        self_: *const c_void,
        item: c_long,
        geometry: c_int,
        state: c_int,
    ) -> c_long;
    pub fn wxListCtrl_GetSelectedItemCount(self_: *const c_void) -> c_int;
    pub fn wxListCtrl_GetSubItemRect(
        self_: *const c_void,
        item: c_long,
        sub_item: c_long,
        rect: *mut c_void,
        code: c_int,
    ) -> bool;
    pub fn wxListCtrl_GetTextColour(self_: *const c_void) -> *mut c_void;
    pub fn wxListCtrl_GetTopItem(self_: *const c_void) -> c_long;
    pub fn wxListCtrl_GetViewRect(self_: *const c_void) -> *mut c_void;
    pub fn wxListCtrl_SetAlternateRowColour(self_: *mut c_void, colour: *const c_void);
    pub fn wxListCtrl_GetAlternateRowColour(self_: *const c_void) -> *mut c_void;
    pub fn wxListCtrl_HitTest(
        self_: *const c_void,
        point: *const c_void,
        flags: *mut c_void,
        ptr_sub_item: *mut c_void,
    ) -> c_long;
    pub fn wxListCtrl_InReportView(self_: *const c_void) -> bool;
    pub fn wxListCtrl_InsertColumn(self_: *mut c_void, col: c_long, info: *const c_void) -> c_long;
    pub fn wxListCtrl_InsertColumn1(
        self_: *mut c_void,
        col: c_long,
        heading: *const c_void,
        format: c_int,
        width: c_int,
    ) -> c_long;
    pub fn wxListCtrl_InsertItem(self_: *mut c_void, info: *mut c_void) -> c_long;
    pub fn wxListCtrl_InsertItem1(
        self_: *mut c_void,
        index: c_long,
        label: *const c_void,
    ) -> c_long;
    pub fn wxListCtrl_InsertItem2(self_: *mut c_void, index: c_long, image_index: c_int) -> c_long;
    pub fn wxListCtrl_InsertItem3(
        self_: *mut c_void,
        index: c_long,
        label: *const c_void,
        image_index: c_int,
    ) -> c_long;
    pub fn wxListCtrl_IsEmpty(self_: *const c_void) -> bool;
    pub fn wxListCtrl_IsVirtual(self_: *const c_void) -> bool;
    pub fn wxListCtrl_RefreshItem(self_: *mut c_void, item: c_long);
    pub fn wxListCtrl_RefreshItems(self_: *mut c_void, item_from: c_long, item_to: c_long);
    pub fn wxListCtrl_ScrollList(self_: *mut c_void, dx: c_int, dy: c_int) -> bool;
    pub fn wxListCtrl_SetColumn(self_: *mut c_void, col: c_int, item: *mut c_void) -> bool;
    pub fn wxListCtrl_SetColumnWidth(self_: *mut c_void, col: c_int, width: c_int) -> bool;
    pub fn wxListCtrl_SetColumnsOrder(self_: *mut c_void, orders: *const c_void) -> bool;
    pub fn wxListCtrl_SetHeaderAttr(self_: *mut c_void, attr: *const c_void) -> bool;
    pub fn wxListCtrl_SetImageList(self_: *mut c_void, image_list: *mut c_void, which: c_int);
    pub fn wxListCtrl_SetNormalImages(self_: *mut c_void, images: *const c_void);
    pub fn wxListCtrl_SetSmallImages(self_: *mut c_void, images: *const c_void);
    pub fn wxListCtrl_IsVisible(self_: *const c_void, item: c_long) -> bool;
    pub fn wxListCtrl_SetItem(self_: *mut c_void, info: *mut c_void) -> bool;
    pub fn wxListCtrl_SetItem1(
        self_: *mut c_void,
        index: c_long,
        column: c_int,
        label: *const c_void,
        image_id: c_int,
    ) -> bool;
    pub fn wxListCtrl_SetItemBackgroundColour(self_: *mut c_void, item: c_long, col: *const c_void);
    pub fn wxListCtrl_SetItemColumnImage(
        self_: *mut c_void,
        item: c_long,
        column: c_long,
        image: c_int,
    ) -> bool;
    pub fn wxListCtrl_SetItemCount(self_: *mut c_void, count: c_long);
    pub fn wxListCtrl_SetItemData(self_: *mut c_void, item: c_long, data: c_long) -> bool;
    pub fn wxListCtrl_SetItemFont(self_: *mut c_void, item: c_long, font: *const c_void);
    pub fn wxListCtrl_SetItemImage(
        self_: *mut c_void,
        item: c_long,
        image: c_int,
        sel_image: c_int,
    ) -> bool;
    pub fn wxListCtrl_SetItemPosition(self_: *mut c_void, item: c_long, pos: *const c_void)
        -> bool;
    // NOT_SUPPORTED: pub fn wxListCtrl_SetItemPtrData(self_: *mut c_void, item: c_long, data: wxUIntPtr) -> bool;
    pub fn wxListCtrl_SetItemState(
        self_: *mut c_void,
        item: c_long,
        state: c_long,
        state_mask: c_long,
    ) -> bool;
    pub fn wxListCtrl_SetItemText(self_: *mut c_void, item: c_long, text: *const c_void);
    pub fn wxListCtrl_SetItemTextColour(self_: *mut c_void, item: c_long, col: *const c_void);
    pub fn wxListCtrl_SetSingleStyle(self_: *mut c_void, style: c_long, add: bool);
    pub fn wxListCtrl_SetTextColour(self_: *mut c_void, col: *const c_void);
    // NOT_SUPPORTED: pub fn wxListCtrl_SortItems(self_: *mut c_void, fn_sort_call_back: wxListCtrlCompare, data: wxIntPtr) -> bool;
    pub fn wxListCtrl_HasCheckBoxes(self_: *const c_void) -> bool;
    pub fn wxListCtrl_EnableCheckBoxes(self_: *mut c_void, enable: bool) -> bool;
    pub fn wxListCtrl_IsItemChecked(self_: *const c_void, item: c_long) -> bool;
    pub fn wxListCtrl_CheckItem(self_: *mut c_void, item: c_long, check: bool);
    pub fn wxListCtrl_ExtendRulesAndAlternateColour(self_: *mut c_void, extend: bool);
    pub fn wxListCtrl_ShowSortIndicator(self_: *mut c_void, col: c_int, ascending: bool);
    pub fn wxListCtrl_RemoveSortIndicator(self_: *mut c_void);
    pub fn wxListCtrl_GetSortIndicator(self_: *const c_void) -> c_int;
    pub fn wxListCtrl_GetUpdatedAscendingSortIndicator(self_: *const c_void, col: c_int) -> bool;
    pub fn wxListCtrl_IsAscendingSortIndicator(self_: *const c_void) -> bool;

    // wxListEvent
    pub fn wxListEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxListEvent_new(command_type: wxEventType, id: c_int) -> *mut c_void;
    pub fn wxListEvent_GetCacheFrom(self_: *const c_void) -> c_long;
    pub fn wxListEvent_GetCacheTo(self_: *const c_void) -> c_long;
    pub fn wxListEvent_GetColumn(self_: *const c_void) -> c_int;
    // NOT_SUPPORTED: pub fn wxListEvent_GetData(self_: *const c_void) -> wxUIntPtr;
    pub fn wxListEvent_GetImage(self_: *const c_void) -> c_int;
    pub fn wxListEvent_GetIndex(self_: *const c_void) -> c_long;
    pub fn wxListEvent_GetItem(self_: *const c_void) -> *mut c_void;
    pub fn wxListEvent_GetKeyCode(self_: *const c_void) -> c_int;
    pub fn wxListEvent_GetLabel(self_: *const c_void) -> *mut c_void;
    pub fn wxListEvent_GetMask(self_: *const c_void) -> c_long;
    pub fn wxListEvent_GetPoint(self_: *const c_void) -> *mut c_void;
    pub fn wxListEvent_GetText(self_: *const c_void) -> *mut c_void;
    pub fn wxListEvent_IsEditCancelled(self_: *const c_void) -> bool;
    pub fn wxListEvent_SetKeyCode(self_: *mut c_void, code: c_int);
    pub fn wxListEvent_SetIndex(self_: *mut c_void, index: c_long);
    pub fn wxListEvent_SetColumn(self_: *mut c_void, col: c_int);
    pub fn wxListEvent_SetPoint(self_: *mut c_void, point: *const c_void);
    pub fn wxListEvent_SetItem(self_: *mut c_void, item: *const c_void);
    pub fn wxListEvent_SetCacheFrom(self_: *mut c_void, cache_from: c_long);
    pub fn wxListEvent_SetCacheTo(self_: *mut c_void, cache_to: c_long);
